--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-google-oauth2": "^0.1.2",
     "react-icons": "^4.4.0",
     "react-medium-image-zoom": "^4.4.3",
     "react-router-dom": "^6.3.0",
