--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "passport": "^0.5.3",
-    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^15.3.2"
   }
