--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "description": "Server code for ResumeHut",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
