--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": "16.13.1",
+    "npm": "8.3.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
