--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "passport": "^0.5.3",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "puppeteer": "^15.3.2"
+    "puppeteer": "^15.3.2",
+    "redis": "^4.2.0"
   }
 }
